2009-05-16  Andy Buckley  <andy@insectnation.org>

	* Adding an "open" FinalState, which is only calculated once per
	even, then used by all other FSes, avoiding the loop over
	non-status 1 particles.

2009-05-15  Andy Buckley  <andy@insectnation.org>

	* Removing incorrect setting of DPS x-errs in CDF_2008 jet shape
	analysis: the DPS autobooking already gets this bit right.

	* Using Jet rather than FastJet::PseudoJet where possible, as it
	means that the phi ranges match up nicely between Particle and the
	Jet object. The FastJet objects are only really needed if you want
	to do detailed things like look at split/merge scales for
	e.g. diff jet rates or "y-split" analyses.

	* Tidying and debugging CDF jet shape analyses and jet shape
	plugin... ongoing, but I think I've found at least one real bug,
	plus a lot of stuff that can be done a lot more nicely.

	* Fully removing deprecated math functions and updating affected
	analyses.

2009-05-14  Andy Buckley  <andy@insectnation.org>

	* Removing redundant rotation in DISKinematics... this was a
	legacy of Peter using theta rather than pi-theta in his rotation.

	* Adding convenience phi, rho, eta, theta, and perp,perp2 methods
	to the 3 and 4 vector classes.

2009-05-12  Andy Buckley  <andy@insectnation.org>

	* Adding event auto-rotation for events with one proton... more
	complete approach?

2009-05-09  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Renaming CDF_2008_NOTE_9337 to CDF_2009_S8233977.

	* Numerous small bug fixes in ALEPH_1996_S3486095.

	* Adding data for one of the Rick-Field-style STAR UE analyses.

2009-05-08  Andy Buckley  <andy@insectnation.org>

	* Adding rivet-mkanalysis script, to make generating new analysis
	source templates easier.

2009-05-07  Andy Buckley  <andy@insectnation.org>

	* Adding null vector check to Vector3::azimuthalAngle().

	* Fixing definition of HCM/Breit frames in DISKinematics, and
	adding asserts to check that the transformation is doing what it
	should.
