@@ -59,7 +59,7 @@ namespace Rivet {
     const ParticleVector&  ZDecayProducts =  invMassFinalState.particles();
 
     // make sure we have 2 Z decay products (mumu or ee) 
-    if (ZDecayProducts.size() < 2) vetoEvent(event);
+    if (ZDecayProducts.size() < 2) vetoEvent;
     _sumWeightSelected += event.weight(); 
     // @todo: write out a warning if there are more than two decay products
     FourMomentum Zmom = ZDecayProducts[0].momentum() +  ZDecayProducts[1].momentum();
