@@ -44,7 +44,7 @@ namespace Rivet {
     // Even if we only generate hadronic events, we still need a cut on numCharged >= 2.
     if (numParticles < 2) {
       getLog() << Log::DEBUG << "Failed leptonic event cut" << endl;
-      vetoEvent(e);
+      vetoEvent;
     }
     getLog() << Log::DEBUG << "Passed leptonic event cut" << endl;
     const double weight = e.weight();
