@@ -61,7 +61,7 @@ namespace Rivet {
     // Even if we only generate hadronic events, we still need a cut on numCharged >= 2.
     if (numParticles < 2) {
       getLog() << Log::DEBUG << "Failed multiplicity cut" << endl;
-      vetoEvent(e);
+      vetoEvent;
     }
     getLog() << Log::DEBUG << "Passed multiplicity cut" << endl;
 
