@@ -40,7 +40,7 @@ namespace Rivet {
     if (fs.isEmpty()) {
       getLog() << Log::DEBUG << "Skipping event " << event.genEvent().event_number()
                << " because no final state found " << endl;
-      vetoEvent(event);
+      vetoEvent;
     }
 
     // Find jets
